# fflow_firefly

./: .clang-format  .gitignore  CMakeLists.txt  README.md  THIRD_PARTY.md
cmake/: FindFFLOW.cmake  FindFIREFLY.cmake
include/: fflowfirefly.h
python_interface/: build.py  fflowfirefly.py  test.py
src/: fflowfirefly.cc
